--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wi-Fi Scanner</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>   
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            margin-bottom: 20px;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 10px;
+        }
+    </style>
 </head>
 <body>
     <h1>Wi-Fi Scanner</h1>
@@ -20,16 +44,20 @@
         <input type="text" name="ssid_to_unblock" required>
         <button type="submit">Unblock</button>
     </form>
-   <form action="/more" method="post">
-	<label for "ssid_for_more_info">SSID for more info:</label>
-	<input type="text" name="ssid_for_more_info" required>
-	<button type="submit">More Info</button>
-   </form>
+    <form action="/more" method="post">
+        <label for="ssid_for_more_info">SSID for more info:</label>
+        <input type="text" name="ssid_for_more_info" required>
+        <button type="submit">More Info</button>
+    </form>
     <form action="/reset">
-	<button type="submit">Reset</button>
-   </form>
-   <a href="/scan_wifi">Scan Wi-Fi</a>
-  <br>
-    <a href="/blocked_wifi">Blocked Wifi List</a>
+        <button type="submit">Reset</button>
+    </form>
+    <div class="btn-group">
+        <a href="/scan_wifi" class="btn btn-primary">Scan Wi-Fi</a>
+        <a href="/blocked_wifi" class="btn btn-primary">Blocked Wifi List</a>
+    </div>
+    <!-- Add Bootstrap JS and Popper.js scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+      </html>
+      
