--- a/templates/more1.html
+++ b/templates/more1.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wi-Fi Scan Results</title>
+    <title>Wi-Fi Detailed Information</title>
     <style>
+     body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
+
         table {
             border-collapse: collapse;
             width: 80%;
@@ -20,30 +28,21 @@
         th {
             background-color: #f2f2f2;
         }
-	h1 {
-	    text-align: center;
-	    }
     </style>
 </head>
 <body>
-    <h1>Wi-Fi Scan Results</h1>
+    <h1>More Information About Selected Wi-Fi</h1>
 
     <table>
         <thead>
             <tr>
                 <th>SSID</th>
-                <th>Signal Strength</th>
-                <th>Frequency</th>
-		<th>Encryption key</th>
             </tr>
         </thead>
         <tbody>
-            {% for ssid, details in wifi_info.items() %}
+            {% for block in details %}
                 <tr>
-                    <td>{{ ssid }}</td>
-                    <td>{{ details['Signal Strength'] }}</td>
-                    <td>{{ details['Frequency'] }}</td>
-                    <td>{{ details['Encryption key'] }}</td>
+                    <td>{{ block }}</td>
                 </tr>
             {% endfor %}
         </tbody>
