--- a/templates/blocked_wifi.html
+++ b/templates/blocked_wifi.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blocked Wi-Fi List</title>
     <style>
+       body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
         table {
             border-collapse: collapse;
             width: 80%;
@@ -20,6 +27,9 @@
         th {
             background-color: #f2f2f2;
         }
+	h1 {
+	text-align: center;
+	}
     </style>
 </head>
 <body>
@@ -28,7 +38,7 @@
     <table>
         <thead>
             <tr>
-                <th>Blocked Wifi</th>
+                <th>SSID</th>
             </tr>
         </thead>
         <tbody>
