--- a/templates/more_info.html
+++ b/templates/more_info.html
@@ -17,7 +17,7 @@
 <body>
     <h1>More Information About Selected Wi-Fi</h1>
 	  {% for block in details %}
-              <pre>  {{ block }}</pre>
+              <pre style="text-align:center">  {{ block }}</pre>
             {% endfor %}
     
 </body>
