--- a/templates/blocked_wifi.html
+++ b/templates/blocked_wifi.html
@@ -14,13 +14,13 @@
         }
         table {
             border-collapse: collapse;
-            width: 80%;
+            width: 50%;
             margin: 20px auto;
         }
 
         th, td {
             border: 1px solid #dddddd;
-            text-align: left;
+            text-align: center;
             padding: 8px;
         }
 
