--- a/templates/i1.html
+++ b/templates/i1.html
@@ -3,35 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wi-Fi Scanner</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <title>Wi-Fi Analyzer</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>   
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            margin: 0;
+        }
+
+        form {
+            margin-bottom: 20px;
+        }
+
+        .btn-group {
+            display: flex;
+            gap: 20px;
+	    margin: 20px auto 40px;
+        }
+	h1 {
+           margin: 10px 20px 50px;
+       }
+	h3 {
+	color: green;
+	margin-bottom: 40px;
+	}
+     .header {
+	   color: black;
+	   padding: 20px;
+	   text-align: center;
+	   border-radius: 60px;
+	   margin-bottom: 20px;
+  	}
+    </style>
 </head>
 <body>
-    <h1>Wi-Fi Scanner</h1>
+  <div class="header">
+   <b> <h1>Wi-Fi Analyzer</h1></b>
+  </div>
     {% if message %}
-        <p>{{ message }}</p>
+        <h3>{{ message }}</h3>
     {% endif %}
+     <div class="btn-group">
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
+     </div>
     <form action="/block_function" method="post">
-        <label for="ssid_to_block">SSID to block:</label>
-        <input type="text" name="ssid_to_block" required>
-        <button type="submit">Block</button>
+        <label for="ssid_to_block">Enter SSID to block:</label>
+        <input type="text" placeholder="Example: LTTS-Guest" name="ssid_to_block" required>
+        <button type="submit" class="btn btn-warning">Block</button>
     </form>
     <form action="/unblock_function" method="post">
-        <label for="ssid_to_unblock">SSID to unblock:</label>
-        <input type="text" name="ssid_to_unblock" required>
-        <button type="submit">Unblock</button>
+        <label for="ssid_to_unblock">Enter SSID to unblock:</label>
+        <input type="text" placeholder="Example: LTTS-Guest" name="ssid_to_unblock" required>
+        <button type="submit" class="btn btn-secondary">Unblock</button>
     </form>
-   <form action="/more" method="post">
-	<label for "ssid_for_more_info">SSID for more info:</label>
-	<input type="text" name="ssid_for_more_info" required>
-	<button type="submit">More Info</button>
-   </form>
-    <form action="/reset">
-	<button type="submit">Reset</button>
-   </form>
-   <a href="/scan_wifi">Scan Wi-Fi</a>
-  <br>
-    <a href="/blocked_wifi">Blocked Wifi List</a>
+    <form action="/more" method="post">
+        <label for="ssid_for_more_info">Enter SSID for more info:</label>
+        <input type="text" placeholder="Example: LTTS-Guest" name="ssid_for_more_info" required>
+        <button type="submit" class="btn btn-info">More Info</button>
+    </form>
+    <div class="btn-group">
+        <a href="/blocked_wifi" class="btn btn-dark">All Blocked Wi-Fi Signals</a>
+	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-</html>
+      </html>
+      
