--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wi-Fi Scanner</title>
+    <title>Wi-Fi Analyzer</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -29,40 +29,47 @@
 	    margin: 20px auto 40px;
         }
 	h1 {
-           margin: 10px 20px 50px;
+           margin: 0;
        }
 	h3 {
 	color: green;
 	margin-bottom: 40px;
 	}
+     .header {
+	   color: black;
+	   padding: 20px;
+	   text-align: center;
+	   border-radius: 60px;
+	   margin-bottom: 20px;
+  	}
     </style>
 </head>
 <body>
-    <h1>Wi-Fi Analyzer</h1>
+  <div class="header">
+    <h1>Welcome to Wi-Fi Analyzer</h1>
+    <P>A webpage for analysing Wi-Fi signals.</p>
+  </div>
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
      <div class="btn-group">
 	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
      </div>
-    <form action="/block_function" method="post">
-        <label for="ssid_to_block">Enter SSID to block:</label>
-        <input type="text" placeholder="LTTS-Guest" name="ssid_to_block" required>
-        <button type="submit" class="btn btn-danger">Block</button>
-    </form>
-    <form action="/unblock_function" method="post">
-        <label for="ssid_to_unblock">Enter SSID to unblock:</label>
-        <input type="text" placeholder="LTTS-Guest" name="ssid_to_unblock" required>
-        <button type="submit" class="btn btn-secondary">Unblock</button>
-    </form>
-    <form action="/more" method="post">
-        <label for="ssid_for_more_info">Enter SSID for more info:</label>
-        <input type="text" placeholder="LTTS-Guest" name="ssid_for_more_info" required>
-        <button type="submit" class="btn btn-info">More Info</button>
-    </form>
+
+   <form method="post">
+    <div class="mb-3">
+    <label for="input_ssid" class="form-label">Enter SSID</label>
+    <input type="text" class="form-control" placeholder="Example: LTTS-Guest"  id="exampleInputEmail1" name="input_ssid" required>
     <div class="btn-group">
-        <a href="/blocked_wifi" class="btn btn-primary">All Blocked Wi-Fi Signals</a>
-	<a href="/reset" class="btn btn-primary">Delete All Blocked Wi-Fi Signals</a>
+	<button type="submit" formaction="/block_function" class="btn btn-warning">Block</button>
+	 <button type="submit" formaction="/unblock_function" class="btn btn-secondary">Unblock</button>
+	 <button type="submit" formaction="/more" class="btn btn-info">More Info</button>
+    </div>
+   </form>
+
+    <div class="btn-group">
+        <a href="/blocked_wifi" class="btn btn-dark">All Blocked Wi-Fi Signals</a>
+	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
