--- a/templates/scan_wifi.html
+++ b/templates/scan_wifi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wi-Fi Scan Results</title>
+    <title>Wi-Fi Scan Result</title>
     <style>
         table {
             border-collapse: collapse;
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <h1>Wi-Fi Scan Results</h1>
+    <h1>Wi-Fi Scan Result</h1>
 
     <table>
         <thead>
@@ -41,9 +41,9 @@
             {% for ssid, details in wifi_info.items() %}
                 <tr>
                     <td>{{ ssid }}</td>
-                    <td>{{ details['Signal Strength'] }}</td>
+                    <td>{{ details['Signal Strength']}}</td>
                     <td>{{ details['Frequency'] }}</td>
-                    <td>{{ details['Encryption key'] }}</td>
+                    <td style="text-align:center;">{{ details['Encryption key'][0] }}</td>
                 </tr>
             {% endfor %}
         </tbody>
