--- a/templates/index.html
+++ b/templates/index.html
@@ -46,14 +46,14 @@
 </head>
 <body>
   <div class="header">
-    <h1>Welcome to Wi-Fi Analyzer</h1>
+    <h1>Welcome to Wi-Fi Analyzer Page</h1>
     <P>A webpage for analysing Wi-Fi signals.</p>
   </div>
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
      <div class="btn-group">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan Wi-Fi/a>
      </div>
 
    <form method="post">
@@ -68,8 +68,8 @@
    </form>
 
     <div class="btn-group">
-        <a href="/blocked_wifi" class="btn btn-dark">All Blocked Wi-Fi Signals</a>
-	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
+        <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
+	<a href="/reset" class="btn btn-danger">Unblock <more>All</more> Blocked Wi-Fi</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
