--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         <h3>{{ message }}</h3>
     {% endif %}
      <div class="btn-group">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan Wi-Fi/a>
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
      </div>
 
    <form method="post">
@@ -69,7 +69,7 @@
 
     <div class="btn-group">
         <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
-	<a href="/reset" class="btn btn-danger">Unblock <more>All</more> Blocked Wi-Fi</a>
+	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
