--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
    <form method="post">
     <div class="mb-3">
     <label for="input_ssid" class="form-label">Enter SSID</label>
-    <input type="text" class="form-control" placeholder="Example: LTTS-Guest"  id="exampleInputEmail1" name="input_ssid" required>
+    <input type="text" class="form-control" placeholder="Example: LTTS-Guest"  name="input_ssid" required>
     <div class="btn-group">
 	<button type="submit" formaction="/block_function" class="btn btn-warning">Block</button>
 	 <button type="submit" formaction="/unblock_function" class="btn btn-secondary">Unblock</button>
