--- a/templates/connect.html
+++ b/templates/connect.html
@@ -46,33 +46,23 @@
 </head>
 <body>
   <div class="header">
-    <h1>Welcome to Wi-Fi Analyzer Page</h1>
-    <P>A webpage for analysing Wi-Fi signals.</p>
-  </div>
+    <h1>Login Page</h1>
+   </div>
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
-     <div class="btn-group">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
-	<a href="/plot" class="btn btn-info btn-lg btn-block">Visualize Scanned Wi-Fi</a>
-     </div>
 
    <form method="post">
     <div class="mb-3">
     <label for="input_ssid" class="form-label">Enter SSID</label>
     <input type="text" class="form-control" placeholder="Example: LTTS-Guest"  name="input_ssid" required>
+	<br>
+   <label for="password" class="form-label">Password</label>
+   <input type="password" class="form-control" name="pwd" required>
     <div class="btn-group">
-	<button type="submit" formaction="/block_function" class="btn btn-warning">Block</button>
-	 <button type="submit" formaction="/unblock_function" class="btn btn-secondary">Unblock</button>
-	 <button type="submit" formaction="/more" class="btn btn-info">More Info</button>
+	<button type="submit" formaction="/connect_to_given_input" class="btn btn-primary">Submit</button>
     </div>
    </form>
-
-    <div class="btn-group">
-         <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
-        <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
-	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
