--- a/templates/plot.html
+++ b/templates/plot.html
@@ -39,7 +39,7 @@
          <h1>Wi-Fi Signal Strengths Graph</h1>
          </div>
 
-      <img src="data:image/png;base64,{{ img }} alt="wifi signal strengths">
+      <img src="{{ url_for('static', filename='plot.png') }}" alt="wifi signal strengths">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
