--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,7 @@
          <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
         <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
 	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
+	<a href="/speed_test" class="btn btn-primary">Speed Test</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
