--- a/templates/speed.html
+++ b/templates/speed.html
@@ -46,7 +46,7 @@
 	<a href="{{ link }}" class="btn btn-info" target="_blank">Check Internet Speed</a>
 	</div>
 	{% else %}
-	<h3>Currently Unable to Test the Speed</h3>
+	<h3>Try again......</h3>
 	{% endif %}
       <a href="{{ url }}" 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
