--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,11 @@
             gap: 20px;
 	    margin: 20px auto 40px;
         }
+        .top-button {
+                display: flex;
+		gap: 20px;
+		margin: 20px auto 20px;
+            }              
 	h1 {
            margin: 0;
        }
@@ -52,9 +57,11 @@
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
-     <div class="btn-group">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan All Available Wi-Fi Signals</a>
-	<a href="/plot" class="btn btn-info btn-lg btn-block">Visualize Scanned Wi-Fi</a>
+     <div class="top-button">
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan Available WIFI</a>
+       </div>
+      <div class="top-button">
+	<a href="/plot" class="btn btn-info btn-lg btn-block">Available Wifi Bar-Graph</a>
      </div>
 
    <form method="post">
