--- a/templates/index.html
+++ b/templates/index.html
@@ -29,9 +29,9 @@
 	    margin: 20px auto 40px;
         }
         .top-button {
-                display: flex;
-		gap: 20px;
-		margin: 20px auto 20px;
+                
+		gap: 0px;
+		margin: 0px auto 0px;
             }              
 	h1 {
            margin: 0;
@@ -47,6 +47,14 @@
 	   border-radius: 60px;
 	   margin-bottom: 20px;
   	}
+       a {
+           text-decoration: none;
+        }
+      .btn:hover {
+         color: #fff;
+	 background-color: #28a745;
+	 border-color: #28a745;
+      }
     </style>
 </head>
 <body>
@@ -57,13 +65,11 @@
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
-     <div class="top-button">
+    <div class="top-button">
 	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan Available WIFI</a>
-       </div>
-      <div class="top-button">
-	<a href="/plot" class="btn btn-info btn-lg btn-block">Available Wifi Bar-Graph</a>
-     </div>
-
+        <a href="/plot" class="btn btn-info btn-md btn-block">Available Wifi Bar-Graph</a>
+      </div>   
+  
    <form method="post">
     <div class="mb-3">
     <label for="input_ssid" class="form-label">Enter SSID</label>
