--- a/templates/speed.html
+++ b/templates/speed.html
@@ -21,7 +21,7 @@
 	h1 {
            margin: 0;
  	   text-align: center;
-	   color: green;
+	   color: black;
 		
        }
 	h3 {
@@ -35,6 +35,11 @@
 	   border-radius: 60px;
 	   margin-bottom: 20px;
   	}
+      .btn:hover {
+		color: #fff;
+		background-color: #28a745;
+		border-color: #28a745;
+		}
     </style>
     </head>
      <body>
