--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>   
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
     <style>
         body {
             display: flex;
@@ -17,6 +18,7 @@
             justify-content: center;
             min-height: 100vh;
             margin: 0;
+	    font-family: 'Opens Sans',sans-serif;
         }
 
         form {
@@ -82,10 +84,10 @@
    </form>
 
     <div class="btn-group">
-         <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
         <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
-	<a href="/reset" class="btn btn-danger">Delete All Blocked Wi-Fi Signals</a>
-	<a href="/speed_test" class="btn btn-primary">Speed Test</a>
+	<a href="/reset" class="btn btn-danger">Remove All Blocked Wi-Fi</a>
+        <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
+	<a href="/speed_test" class="btn btn-primary">Intenet Speed Test</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
