--- a/templates/index.html
+++ b/templates/index.html
@@ -87,6 +87,7 @@
         <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
 	<a href="/reset" class="btn btn-danger">Remove All Blocked Wi-Fi</a>
         <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
+	<a href="/ping" class="btn btn-primary">Ping</a>
 	<a href="/speed_test" class="btn btn-primary">Intenet Speed Test</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
