--- a/templates/ping_to_inputip.html
+++ b/templates/ping_to_inputip.html
@@ -3,69 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ping to a host</title>
+    <title>Ping Result</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>   
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
+	body {
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             min-height: 100vh;
             margin: 0;
+	    font-family: 'Opens Sans',sans-serif;
+        }
+        table {
+            border-collapse: collapse;
+            width: 80%;
+            margin: 20px auto;
         }
 
-        form {
-            margin-bottom: 20px;
+        th, td {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
         }
 
-        .btn-group {
-            display: flex;
-            gap: 20px;
-	    margin: 20px auto 40px;
+        th {
+            background-color: #f2f2f2;
         }
 	h1 {
-           margin: 0;
-       }
+	    text-align: center;
+	    }
+	 .btn-group {
+            display: flex;
+            gap: 20px;
+	    margin: 20px 500px 40px;
+	}
 	h3 {
 	color: green;
 	margin-bottom: 40px;
 	}
-     .header {
-	   color: black;
-	   padding: 20px;
-	   text-align: center;
-	   border-radius: 60px;
-	   margin-bottom: 20px;
-  	}
-	.btn:hover {
-         color: #fff;
-	 background-color: #28a745;
-	 border-color: #28a745;
-      }
+	
     </style>
 </head>
 <body>
-  <div class="header">
-    <h1>Ping to an IP Address</h1>
-   </div>
+    <h1>Ping Result</h1>
     {% if message %}
         <h3>{{ message }}</h3>
     {% endif %}
-
-   <form method="post">
-    <div class="mb-3">
-    <label for="input_ip" class="form-label">Enter IP Address</label>
-    <input type="text" class="form-control"  name="input_ip" required>
-    <div class="btn-group">
-	<button type="submit" formaction="/ping_to_input_ip" class="btn btn-primary">Submit</button>
-    </div>
-   </form>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+      <table>
+            <tr>
+                <img src="{{ url_for('static', filename='ping.png') }}" alt="image loading....">
+            </tr>
+     
+            {% for parameters, details in info.items() %}
+                <tr>
+                    <td><th>{{ parameters }}</th> </td>
+                    <td>{{ details }} ms</td>
+                </tr>
+            {% endfor %}
+    </table>
 </body>
-      </html>
-      
+</html>
+
+
+
+
+
+
+		
+		
+
+		
