--- a/templates/connect.html
+++ b/templates/connect.html
@@ -63,6 +63,9 @@
 	<button type="submit" formaction="/connect_to_given_input" class="btn btn-primary">Submit</button>
     </div>
    </form>
+   <footer class="fixed-bottom text-center bg-light p-2">
+	<a href="/" class="btn btn-primary">Go to Main Page</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
