--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: 100vh;
+            min-height: 75vh;
             margin: 0;
 	    font-family: 'Opens Sans',sans-serif;
         }
@@ -34,7 +34,10 @@
                 
 		gap: 0px;
 		margin: 0px auto 0px;
-            }              
+            } 
+	.top-margin {
+		margin: 20px auto 20px;
+	    }
 	h1 {
            margin: 0;
        }
@@ -44,9 +47,9 @@
 	}
      .header {
 	   color: black;
-	   padding: 20px;
+	   padding: 10px;
 	   text-align: center;
-	   border-radius: 60px;
+	   border-radius: 30px;
 	   margin-bottom: 20px;
   	}
        a {
@@ -57,6 +60,22 @@
 	 background-color: #28a745;
 	 border-color: #28a745;
       }
+      h2{
+	  text-align: center;
+	  padding: 30px auto 300px
+      }
+      .heading-2{
+	 margin: 60px auto 30px;
+     }
+     
+     .btn-1{
+	 background-color: #fafad2;
+      }
+      .btn-2{
+	 background-color:  #ffb6c1;
+      }
+      
+     
     </style>
 </head>
 <body>
@@ -68,12 +87,12 @@
         <h3>{{ message }}</h3>
     {% endif %}
     <div class="top-button">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block">Scan Available WIFI</a>
-        <a href="/plot" class="btn btn-info btn-md btn-block">Available Wifi Bar-Graph</a>
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block top-margin">Scan Available WIFI</a>
+        <a href="/plot" class="btn btn-info btn-lg btn-block top-margin">Available Wifi Bar-Graph</a>
       </div>   
   
    <form method="post">
-    <div class="mb-3">
+    <div class="mb-1">
     <label for="input_ssid" class="form-label">Enter SSID</label>
     <input type="text" class="form-control" placeholder="Example: LTTS-Guest"  name="input_ssid" required>
     <div class="btn-group">
@@ -82,14 +101,18 @@
 	 <button type="submit" formaction="/more" class="btn btn-info">More Info</button>
     </div>
    </form>
+   <div class="heading-2">
+   <h2>Important Links</h2>
+   </div>
+    
 
-    <div class="btn-group">
-        <a href="/blocked_wifi" class="btn btn-dark">Blocked Wi-Fi List</a>
-	<a href="/reset" class="btn btn-danger">Remove All Blocked Wi-Fi</a>
-        <a href="/connect" class="btn btn-primary">Connect to a Wifi</a>
-	<a href="/ping" class="btn btn-primary">Ping</a>
-	<a href="/speed_test" class="btn btn-primary">Intenet Speed Test</a>
-    </div>
+
+        <a href="/blocked_wifi" class="btn btn-dark btn-lg btn-block ">Blocked Wi-Fi List</a>
+	<a href="/reset" class="btn btn-danger btn-lg btn-block ">Remove All Blocked Wi-Fi</a>
+        <a href="/connect" class="btn btn-1 btn-lg btn-block ">Connect to a Wifi</a>
+	<a href="/ping" class="btn btn-2 btn-lg btn-block ">Ping to a Host</a>
+	<a href="/speed_test" class="btn btn-primary btn-lg btn-block ">Intenet Speed Test</a>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
