--- a/templates/plot.html
+++ b/templates/plot.html
@@ -43,6 +43,9 @@
          </div>
 
       <img src="{{ url_for('static', filename='plot.png') }}" alt="wifi signal strengths">
+      <footer class="fixed-bottom text-center bg-light p-2">
+	<a href="/" class="btn btn-primary">Go to Main Page</a>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
