--- a/templates/speed.html
+++ b/templates/speed.html
@@ -53,7 +53,10 @@
 	{% else %}
 	<h3>Try again......</h3>
 	{% endif %}
-      <a href="{{ url }}" 
+     
+      <footer class="fixed-bottom text-center bg-light p-2">
+	<a href="/" class="btn btn-primary">Go to Main Page</a>
+    </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
