--- a/templates/index.html
+++ b/templates/index.html
@@ -112,7 +112,9 @@
         <a href="/connect" class="btn btn-1 btn-lg btn-block ">Connect to a Wifi</a>
 	<a href="/ping" class="btn btn-2 btn-lg btn-block ">Ping to a Host</a>
 	<a href="/speed_test" class="btn btn-primary btn-lg btn-block ">Intenet Speed Test</a>
-    
+     <footer class="fixed-bottom text-center bg-light p-2">
+	<a href="/documentation" class="btn btn-primary">User Documentation</a>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
       </html>
