--- a/templates/index.html
+++ b/templates/index.html
@@ -87,8 +87,8 @@
         <h3>{{ message }}</h3>
     {% endif %}
     <div class="top-button">
-	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block top-margin">Scan Available WIFI</a>
-        <a href="/plot" class="btn btn-info btn-lg btn-block top-margin">Available Wifi Bar-Graph</a>
+	<a href="/scan_wifi" class="btn btn-primary btn-lg btn-block top-margin">Scan Available Wi-Fi</a>
+        <a href="/plot" class="btn btn-info btn-lg btn-block top-margin">Available Wi-Fi Bar-Graph</a>
       </div>   
   
    <form method="post">
@@ -109,7 +109,7 @@
 
         <a href="/blocked_wifi" class="btn btn-dark btn-lg btn-block ">Blocked Wi-Fi List</a>
 	<a href="/reset" class="btn btn-danger btn-lg btn-block ">Remove All Blocked Wi-Fi</a>
-        <a href="/connect" class="btn btn-1 btn-lg btn-block ">Connect to a Wifi</a>
+        <a href="/connect" class="btn btn-1 btn-lg btn-block ">Connect to a Wi-Fi</a>
 	<a href="/ping" class="btn btn-2 btn-lg btn-block ">Ping to a Host</a>
 	<a href="/speed_test" class="btn btn-primary btn-lg btn-block ">Intenet Speed Test</a>
      <footer class="fixed-bottom text-center bg-light p-2">
