--- a/templates/ping.html
+++ b/templates/ping.html
@@ -59,7 +59,7 @@
 
    <form method="post">
     <div class="mb-3">
-    <label for="input_ip" class="form-label">Enter IP Address</label>
+    <label for="input_ip" class="form-label">Enter IP Address or URL</label>
     <input type="text" class="form-control"  name="input_ip" required>
     <div class="btn-group">
 	<button type="submit" formaction="/ping_to_input_ip" class="btn btn-primary">Submit</button>
