--- a/templates/documentation.html
+++ b/templates/documentation.html
@@ -6,6 +6,31 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyHqc4A6GgRXPx4ufoL/Z9R8JnCkU"
         crossorigin="anonymous">
     <title>User Documentation</title>
+       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>   
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+ <style>
+  body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 75vh;
+            margin: 0;
+	    font-family: 'Opens Sans',sans-serif;
+        }
+    .list-group-item:hover{
+                color: #fff;
+                background-color: #1e90ff ;
+                border-color: #1e90ff ;
+ }
+ 
+     h2{
+         text-align: center;
+        }
+ </style>
 </head>
 <body>
 
@@ -15,14 +40,94 @@
     <!-- Links with Documentation -->
     <div class="list-group mt-3">
         <!-- ... Previous links and documentation ... -->
+         <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#scanWifiDoc">
+            Scan Available WiFi
+        </button>
+        <div id="scanWifiDoc" class="collapse mt-2">
+            <p>
+                When you click on the "Scan Available WiFi" button, it initiates a scan of all available WiFi signals. 
+                The results are then listed, providing details such as SSID name, signal strength, frequency, 
+                and encryption key for each WiFi network. Importantly, the scan filters out any blocked WiFi 
+                signals during the process.
+            </p>
+        </div>
 
+        <!-- Second Link: Available WiFi Bar Graph Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#wifiBarGraphDoc">
+            Available WiFi Bar Graph
+        </button>
+        <div id="wifiBarGraphDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "Available WiFi Bar Graph" link will plot a graph of all available WiFi networks,
+                showcasing their signal strengths. This visual representation helps you quickly assess the WiFi landscape 
+                and identify networks with stronger signals.
+            </p>
+        </div>
+
+        <!-- Third Link: Block WiFi Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#blockWifiDoc">
+            Block WiFi
+        </button>
+        <div id="blockWifiDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "Block" link allows you to block a specific WiFi network. Enter the SSID of the WiFi 
+                you want to block, and the system will block it. If the entered WiFi signal is not found, you'll receive a 
+                message indicating that the WiFi signal was not found.
+            </p>
+        </div>
+
+        <!-- Fourth Link: Unblock WiFi Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#unblockWifiDoc">
+            Unblock WiFi
+        </button>
+        <div id="unblockWifiDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "Unblock" link allows you to unblock a WiFi network that was previously blocked. Enter 
+                the SSID of the WiFi you want to unblock, and the system will restore its availability. If the entered WiFi 
+                signal is not found, you'll receive a message indicating that the WiFi signal was not found.
+            </p>
+        </div>
+
+        <!-- Fifth Link: More Info Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#moreInfoDoc">
+            More Info
+        </button>
+        <div id="moreInfoDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "More Info" link allows you to enter the SSID of a WiFi network and view detailed information 
+                corresponding to that network. This includes additional details such as signal strength, frequency, 
+                encryption key, and any other relevant information available for the specified WiFi network.
+            </p>
+        </div>
+
+        <!-- Sixth Link: Blocked WiFi List Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#blockedWifiListDoc">
+            Blocked WiFi List
+        </button>
+        <div id="blockedWifiListDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "Blocked WiFi List" link displays a list of all blocked WiFi networks. If there are no blocked 
+                WiFi networks, a message will indicate that the blocked WiFi list is empty, and there is nothing to display.
+            </p>
+        </div>
+
+        <!-- Seventh Link: Remove All Blocked WiFi Documentation -->
+        <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#removeAllBlockedWifiDoc">
+            Remove All Blocked WiFi
+        </button>
+        <div id="removeAllBlockedWifiDoc" class="collapse mt-2">
+            <p>
+                Clicking on the "Remove All Blocked WiFi" link removes all WiFi networks from the blocked list. A confirmation 
+                message will be displayed, and the blocked WiFi list will be empty if successful.
+            </p>
+        </div>
         <!-- Eighth Link: Connect to WiFi Documentation -->
         <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#connectToWifiDoc">
             Connect to WiFi
         </button>
         <div id="connectToWifiDoc" class="collapse mt-2">
             <p>
-                Clicking on the "Connect to WiFi" link opens a new page where you can enter the SSID and password of the WiFi 
+                Clicking on the "Connect to a WiFi" link opens a new page where you can enter the SSID and password of the WiFi 
                 network you want to connect to. If the provided credentials are correct, the system will connect to the WiFi. 
                 In case the entered WiFi is not found, a message will be displayed indicating that the entered WiFi was not found.
             </p>
@@ -30,7 +135,7 @@
 
         <!-- Ninth Link: Ping to Host Documentation -->
         <button class="list-group-item list-group-item-action" data-toggle="collapse" data-target="#pingToHostDoc">
-            Ping to Host
+            Ping to a Host
         </button>
         <div id="pingToHostDoc" class="collapse mt-2">
             <p>
@@ -51,11 +156,11 @@
                 as download speed, upload speed, and other relevant information about the internet speed of the connected network.
             </p>
         </div>
-
-        <!-- Continue adding links and documentation sections as needed -->
     </div>
 </div>
-
+  <footer class="fixed-bottom text-center bg-light p-2">
+	<a href="/" class="btn btn-primary">Go to Main Page</a>
+    </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-XrD4HZtAhe5JFh9Edsd9iZ9aVoMzys21pZlFv0nm6yAqI1rJkuvQ7o49XspwFfJ"
